# numtypes

./: LICENSE  README.md  meson-build.md  meson.build  pyproject.toml  setup.py
.github/workflows/: tests.yml
_build_utils/: process_src.py
numtypes/: __init__.py
numtypes/tests/: test_complex_int.py  test_logtypes.py  test_nint32.py  test_polarcomplex.py  test_python_logfloat.py
numtypes/tests/python_reference/: logtypes.py
src/: _complex_int.c.src  _nint.c.src  _polarcomplex.c.src  meson.build
src/logtypes/: _logtypes.c.src  _python_logtypes.c
